FIX #8956 fix actions button align under chrome

--- a/src/frontend/app/list/basket-list.component.scss
+++ b/src/frontend/app/list/basket-list.component.scss
@@ -81,7 +81,7 @@ mat-toolbar {
 .actions {
     box-shadow: none;
     flex: 1;
-    justify-content: end;
+    justify-content: flex-end;
     overflow: inherit;
 }
 .mat-badge-content {
